maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: ')' expected but 'return' found.
			if (getIndication(i,j)==9999 && (aMurNord(i,j) && aMurOuest(i,j) && aMurNord(i,j+1) && aMurOuest(i,j+1)) return false
                                                                                                                                 ^